--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,58 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 0 0% 100%;
+    --foreground: 0 0% 29%;
+    --primary: 154 56% 68%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 206 71% 53%;
+    --secondary-foreground: 0 0% 100%;
+    --accent: 154 56% 68%;
+    --accent-foreground: 0 0% 100%;
+    --destructive: 0 98% 44%;
+    --destructive-foreground: 0 0% 100%;
+    --muted: 0 0% 96%;
+    --muted-foreground: 0 0% 29%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 29%;
+    --popover: 0 0% 96%;
+    --popover-foreground: 0 0% 29%;
+    --border: 0 0% 70%;
+    --input: 0 0% 70%;
+    --ring: 0 0% 100%;
+    --radius: 0.5rem;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  .dark {
+    --background: 0 0% 29%;
+    --foreground: 0 0% 100%;
+    --primary: 154 56% 68%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 206 71% 53%;
+    --secondary-foreground: 0 0% 100%;
+    --accent: 154 56% 68%;
+    --accent-foreground: 0 0% 100%;
+    --destructive: 0 98% 44%;
+    --destructive-foreground: 0 0% 100%;
+    --muted: 0 0% 20%;
+    --muted-foreground: 0 0% 100%;
+    --card: 0 0% 12%;
+    --card-foreground: 0 0% 100%;
+    --popover: 0 0% 15%;
+    --popover-foreground: 0 0% 100%;
+    --border: 0 0% 70%;
+    --input: 0 0% 70%;
+    --ring: 0 0% 100%;
+    --radius: 0.5rem;
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  body {
+    @apply bg-background text-foreground font-body;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-heading;
   }
 }
